--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
