--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "dotenv": "^16.4.7"
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
