--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@supabase/supabase-js": "^2.47.10",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-hook-speech-to-text": "^0.8.0",
+    "react-router-dom": "^7.1.1",
+    "react-webcam": "^7.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
