--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "react-webcam": "^7.2.0",
     "uuid": "^11.0.3"
   },
