--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "microsoft-cognitiveservices-speech-sdk": "^1.42.0"
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
+    "raw-body": "^3.0.0",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
